.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727243000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:15:47Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727243000.echo.example.com
  resourceVersion: "2228079"
  uid: e26afc0c-17e3-4ec4-ba09-dbd26290e0df
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVR2p2djBpMWpEbURKZXE0Z0luSkVhaWhybUxjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERlNNRkFHQTFVRUF3eEpaV05vYnkxemJXOXJaUzFqYjIxaWFXNWxaQzFzYVhabExXTnZiV0pwYm1WawpMVEl3TWpZd056STNNalF6TURBd0xXVmphRzh0YjNCbGNtRjBiM0lnZDJWaWFHOXZheUJEUVRBZUZ3MHlOakEzCk1qY3hOVEUxTkRaYUZ3MHlOekEzTWpjeE5URTFORFphTUZReFVqQlFCZ05WQkFNTVNXVmphRzh0YzIxdmEyVXQKWTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bFpDMHlNREkyTURjeU56STBNekF3TUMxbFkyaHZMVzl3WlhKaApkRzl5SUhkbFltaH [...]
    service:
      name: echo-smoke-combined-live-combined-20260727243000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727243000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727243000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
